--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
 	padding-top: 40px;
+	height: 100%;
 }
 
 a:focus {
@@ -41,8 +42,18 @@ input#user_remember_me {
 	margin-left: 10px;
 }
 
+#sidebar_container {
+	height: 610px;
+	margin-left: 0;
+}
+
+#sidebar {
+	height: 100%;
+	overflow: auto;
+}
+
 #map_container {
-	height: 800px;
+	height: 650px;
 }
 
 #map {
